Add KaTeX as MathJax compatible script in template for gh render

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,2 +1,4 @@
 {% extends "zerm/templates/page.html" %}
 {% block title %}{{ page.title }}{% endblock %}
+<script type="math/tex">x+\sqrt{1-x^2}</script>
+
