Update about with math=true and both script tag and template render

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "zerm/templates/page.html" %}
 {% block title %}{{ page.title }}{% endblock %}
 <script type="math/tex">x+\sqrt{1-x^2}</script>
+{% katex(block=true) %}\KaTeX{% end %} 
 
